Fixed status shift in navbar

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -84,6 +84,7 @@
 
       i {
         font-size: 1.5rem;
+        padding: 0 0.75rem;
       }
     }
 
